// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Standard 1`] = `
<svg
  aria-describedby={null}
  aria-hidden={true}
  className="MuiSvgIcon-root makeStyles-icon-1"
  focusable="false"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  title=""
  viewBox="0 0 24 24"
>
  <path
    d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"
  />
</svg>
`;

exports[`Icon Standard 2`] = `
<svg
  aria-describedby={null}
  aria-hidden={true}
  className="MuiSvgIcon-root makeStyles-icon-1"
  focusable="false"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  title=""
  viewBox="0 0 24 24"
>
  <path
    d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"
  />
</svg>
`;

exports[`Icon Standard with onClick 1`] = `
<svg
  aria-describedby={null}
  aria-hidden={true}
  className="MuiSvgIcon-root makeStyles-icon-2"
  focusable="false"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  title=""
  viewBox="0 0 24 24"
>
  <path
    d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"
  />
</svg>
`;

exports[`Icon Standard with onClick 2`] = `
<svg
  aria-describedby={null}
  aria-hidden={true}
  className="MuiSvgIcon-root makeStyles-icon-2"
  focusable="false"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  title=""
  viewBox="0 0 24 24"
>
  <path
    d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"
  />
</svg>
`;
